chore: Changes for test packages